# CleverCSV

./: .appveyor.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  .travis_deploy.sh  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  Makefile  README.md  appveyor.yml  azure-pipelines.yml  build_manpages.py  cgrep  make_release.py  pyproject.toml  requirements.txt  setup.py  vgrep
.art/: settings.toml
.github/: dependabot.yml
.github/workflows/: build.yml  deploy.yml
auxiliary/: human.py
ccsv/: __init__.py  __version__.py  break_ties.py  consistency.py  cparser_util.py  detect.py  detect_pattern.py  detect_type.py  dialect.py  escape.py  normal_form.py  parser.py  potential_dialects.py  read.py  type_detect.py  utils.py  wrappers.py  write.py
clevercsv/: __init__.py  __main__.py  __version__.py  _optional.py  _regexes.py  _types.py  break_ties.py  cabstraction.pyi  consistency.py  cparser.pyi  cparser_util.py  cparser_util.pyi  detect.py  detect_pattern.py  detect_type.py  dialect.py  dict_read_write.py  encoding.py  escape.py  exceptions.py  normal_form.py  potential_dialects.py  read.py  utils.py  wrappers.py  write.py
clevercsv/console/: __init__.py  _flags.py  application.py  config.py
clevercsv/console/commands/: __init__.py  _docs.py  _utils.py  _warnings.py  code.py  codegen.py  detect.py  explore.py  standardize.py  view.py
comparison/: .gitignore  Makefile  README.md  comparison.py  detector_clevercsv.py  detector_clevercsv_grow.py  detector_clevercsv_ucb.py  detector_simple.py  detector_sniffer.py  determine_encodings.py  make_plot.py  utils.py
design/: detect.md  purpose.md
docs/: CHANGELOG.rst  README.rst  _readme.rst  changelog.rst  conf.py  index.rst
docs/man/: clevercsv-code.rst  clevercsv-detect.rst  clevercsv-explore.rst  clevercsv-standardize.rst  clevercsv-view.rst  clevercsv.rst  index.rst
docs/source/: clevercsv.console.commands.rst  clevercsv.console.rst  clevercsv.rst  modules.rst
example/: CSV dialect detection with CleverCSV.ipynb  README.md  airedale.csv  imdb.csv  milk.csv
man/: clevercsv-code.1  clevercsv-detect.1  clevercsv-explore.1  clevercsv-help.1  clevercsv-standardize.1  clevercsv-view.1  clevercsv.1
notes/date_regex/: README.md  datefmt.py  dateregex.txt  dateregex_annotated.txt  dateregex_formats.txt  dateregexmin.txt
python/: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
python/ccsv/: __init__.py  break_ties.py  consistency.py  detect.py  detect_pattern.py  detect_type.py  dialect.py  dict_read_write.py  exceptions.py  normal_form.py  parser.py  potential_dialects.py  utils.py  wrappers.py  write.py
python/design/: detect.md  purpose.md
python/src/: abstraction.c
python/tests/: test_detect.py  test_detect_type.py  test_normal_forms.py  test_parser.py  test_potential_dialects.py  test_write.py
python/tests/test_integration/: logresults.py  test_dialect_detection.py  test_dialect_detection_partial.py
python/tests/test_unit/: test_cparser.py  test_detect_pattern.py  test_detect_type.py  test_normal_forms.py  test_parser.py  test_potential_dialects.py  test_reader.py  test_write.py
src/: abstraction.c  cparser.c
stubs/pandas/: __init__.pyi
stubs/pythonfuzz/: main.pyi
stubs/regex/: _regex.pyi  _regex_core.pyi  regex.pyi
stubs/tabview/: __init__.pyi  tabview.pyi
stubs/termcolor/: __init__.pyi
stubs/wilderness/: __init__.pyi
tests/: README.md  test_detect.py  test_detect_pattern.py  test_detect_type.py  test_normal_forms.py  test_parser.py  test_pattern.py  test_reader.py  test_type_detect.py
tests/test_fuzz/: fuzz_sniffer.py
tests/test_integration/: README.md  test_dialect_detection.py  test_dialect_detection_partial.py
tests/test_unit/: test_abstraction.py  test_c_file_naming.py  test_consistency.py  test_console.py  test_cparser.py  test_detect.py  test_detect_pattern.py  test_detect_type.py  test_dict.py  test_encoding.py  test_fuzzing.py  test_normal_forms.py  test_parser.py  test_potential_dialects.py  test_reader.py  test_wrappers.py  test_write.py
