[tool.poetry]
name = "clevercsv"
version = "0.4.1"
description = "A drop-in replacement for the Python CSV module with improved dialect detection"
authors = ["Gertjan van den Burg <gertjanvandenburg@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
regex = "^2018.11"
six = "^1.12"
chardet = "^3.0"
pandas = "^0.24.1"
tabview = "^1.4"
cleo = "^0.7.5"
clikit = "^0.3.1"

[tool.poetry.dev-dependencies]
green = "^2.14"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
