# Define project URLs for use on PyPI
[project.urls]
"Homepage" = "https://github.com/alan-turing-institute/CleverCSV/"
"Bug Tracker" = "https://github.com/alan-turing-institute/CleverCSV/issues/"
"Documentation" = "https://clevercsv.readthedocs.io/en/latest/"

[tool.black]
line-length=79

[tool.isort]
profile="black"
sections=["FUTURE", "STDLIB", "TYPING", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_typing=["typing"]
force_single_line=true
lines_between_types=1

[tool.ruff]
# Exclude stubs directory for now
exclude = ["stubs"]

[tool.mypy]
python_version = 3.8
warn_unused_configs = true

# [[tool.mypy.overrides]]
# packages = ["stubs", "clevercsv", "tests"]
