[tool.poetry]
name = "ccsv"
version = "0.1.0"
description = "A drop-in replacement for the Python CSV module with improved dialect detection"
authors = ["Gertjan van den Burg <gertjanvandenburg@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
regex = "^2018.11"
six = "^1.12"
nose = "^1.3"

[tool.poetry.dev-dependencies]
rednose = "^1.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
